fixing spacing around logo in wide view

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,6 +35,8 @@
 	position: static;
 }
 
-.brand {
-	margin-left: 0px;
+.navbar {
+	.brand {
+		margin-left: 0px;
+	}
 }
